components/monitoring/grafana/base/grafana-app.yaml
# Adding route to Grafana
# The service is created by the operator and named <Grafana_name>-service
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: grafana-access
  namespace: appstudio-grafana
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: grafana-tls
spec:
  port:
    targetPort: https
  tls:
    termination: reencrypt
  to:
    kind: Service
    name: grafana-oauth-service
    weight: 100
  wildcardPolicy: None
